--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebreww.github.io",
+  "name": "nodebrew.tech",
   "version": "0.1.0",
   "homepage": "https://nodebrew.tech",
   "private": true,
