--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ node_modules/.cache/default-development/11.pack
 node_modules/.cache/default-development/11.pack
 *.pack
 node_modules/.cache/default-development/11.pack
+*.pack
+node_modules/.cache/default-development/0.pack
